# nas_file_finder

./: .gitmodules  CHANGES.md  CONNECTION_STATUS.md  DATABASE_CONFIG.md  LICENSE  README.md  README_IT.md  USAGE_GUIDE.md  package.json  tailwind.config.ts  vite.config.mjs
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src/lib/: Settings.svelte  commands.svelte.ts
src/routes/: +page.svelte
