[package]
name = "app"
version = "1.0.0"
description = "A simple desktop application template combining Tauri 2 with Svelte 5 + DaisyUI with a basic ci/cd implemented."
authors = ["Alysonhower Veras Vieira"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.3", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
bb8 = "0.8"
bb8-postgres = "0.8"
chrono = "0.4"
